<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="@dimen/dp_20"
    android:paddingEnd="@dimen/dp_20"
    android:paddingBottom="@dimen/dp_30">

    <ImageView
        android:id="@+id/imageViewThankYou"
        android:layout_width="@dimen/thank_you_image"
        android:layout_height="@dimen/thank_you_image"
        android:layout_marginTop="@dimen/dp_65"
        android:src="@drawable/thankyou"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewThankYouSeller"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/sp_30"
        android:gravity="center"
        android:text="@string/thank_you_seller"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_30"
        android:textStyle="bold"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewThankYou" />

    <TextView
        android:id="@+id/textViewEnsureToCollectAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:gravity="center"
        android:text="@string/ensure_to_collect_amount"
        android:textSize="@dimen/sp_20"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewThankYouSeller" />


    <Button
        android:id="@+id/buttonSellMyProduct"
        android:layout_width="@dimen/dp_0"
        android:layout_height="@dimen/dp_65"
        android:text="@string/sell_more"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>